Overflow proberen te fixen

--- a/style.css
+++ b/style.css
@@ -34,6 +34,12 @@ body {
 }
 
 .overflowx {
+  body, html {
+    overflow-x: hidden;
+  }
+}
+
+.overflowx {
   overflow-x: hidden;
 }
 
